--- a/ApplicationScripting/ChangeLog
+++ b/ApplicationScripting/ChangeLog
@@ -19,50 +19,50 @@
     * STTranscript.m:  Added missing imports.
 
 	
-2003 Mar 27
+2003 Mar 27  Stefan Urbanek <urbanek@host.sk>
 
     * ScriptsPanel.gorm: disallow multiple selection in scripts list. It was
     not possible to get index of selected cell, because of -gui b0rk.
 
-2003 Mar 24
+2003 Mar 24  Stefan Urbanek <urbanek@host.sk>
 
     * GNUmakefile*: Removed unnecessary stuff
     * Documentation: Moved relevant docs into StepTalk documentation. Removed
     the directory.
 
-2003 Mar 23
+2003 Mar 23  Stefan Urbanek <urbanek@host.sk>
 
     * Added ScriptingMenu.gorm
     * NSApplication: new methods: scriptingMenu and setScriptingMenu:
     * Added 'Do selection' and 'Do and show selection' methods for NSTextView
 
-2003 Mar 23
+2003 Mar 23  Stefan Urbanek <urbanek@host.sk>
 
     * Rewritten and changed from library to bundle.
 
-2002 Jun 18
+2002 Jun 18  Stefan Urbanek <urbanek@host.sk>
 
     * STScriptsManager: removed methods that are implemented in StepTalk
     * STScript: moved to StepTalk
     
-2002 May 24
+2002 May 24  Stefan Urbanek <urbanek@host.sk>
 
     * STScriptsManager: reflex renamed method in StepTalk
     
-2002 Apr 13
+2002 Apr 13  Stefan Urbanek <urbanek@host.sk>
 
     * Created ScriptingSupport bundle
     * Created Support/ScriptingSupport.m for loading application scripting 
     support
     * Updated Ink.app example to use loading of scripting support
         
-2002 Apr 12
+2002 Apr 12  Stefan Urbanek <urbanek@host.sk>
 
     * STScriptsManager: Look for scripts also in all loaded bundles
     * NSApplication+additions: Update scripting information from all bundles.
     Read scripting info when new bundle is loaded.
 
-2002 Apr 12
+2002 Apr 12  Stefan Urbanek <urbanek@host.sk>
 
     * ChangeLog started
     
