--- a/Examples/Shell/ChangeLog
+++ b/Examples/Shell/ChangeLog
@@ -3,33 +3,33 @@
     * GNUmakefile: Added flags to show all warnings except for import.
     * STShell.m: Unified name for private categories.
 
-2003 Jan 16
+2003 Jan 16  Stefan Urbanek <urbanek@host.sk>
 
     * GNUmakefile: Added -lncurses
 
-2002 Jun 21
+2002 Jun 21  Stefan Urbanek <urbanek@host.sk>
 
     * Added executeScriptNamed:
     
-2002 Jun 8
+2002 Jun 8  Stefan Urbanek <urbanek@host.sk>
 
     * Reflect STEnvironment changes
     * Removed loading of Foundation module as this is handleb by the 
     STEnvironment
     
-2002 Jun 7
+2002 Jun 7  Stefan Urbanek <urbanek@host.sk>
 
     * Changed printing of result object (handle arrays, dictionaries and sets
     different way)
 
-2002 Jun 6
+2002 Jun 6  Stefan Urbanek <urbanek@host.sk>
 
     * Update completition list lazily (only when needed)
     
-2002 Jun 4
+2002 Jun 4  Stefan Urbanek <urbanek@host.sk>
 
     * add DistributedFinder object finder to the environment
 
-2002 May 30
+2002 May 30  Stefan Urbanek <urbanek@host.sk>
 
     * added Environment object.
