Fixed source reader
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16581 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,3 +1,7 @@
+2003 Apr 29 Stefan Urbanek <urbanek@host.sk>
+
+    * STSourceReader: fixed reading of identifiers at the end of source
+
 2003 Apr 21 Stefan Urbanek <urbanek@host.sk>
 
     * Version 0.7.1
