changed import to include
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16599 72102866-910b-0410-8b05-ffd578937521

--- a/ApplicationScripting/ChangeLog
+++ b/ApplicationScripting/ChangeLog
@@ -1,3 +1,7 @@
+2003 May 1  Stefan Urbanek <urbanek@host.sk>
+
+    * Support: updated files to use #include instead of #import
+
 2003 Apr 04  David Ayers  <d.ayers@inode.at>
 
     * GNUmakefile: Added flags to be able to compile from the building
