Updated application scripting
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16600 72102866-910b-0410-8b05-ffd578937521

--- a/ApplicationScripting/ChangeLog
+++ b/ApplicationScripting/ChangeLog
@@ -1,3 +1,9 @@
+2003 May 2  Stefan Urbanek <urbanek@host.sk>
+
+    * Added 'Objects' searching in application.
+    * Added ScriptingInfo.plist template
+    * GNUmakefile: removed inclusion of source-distribution.make
+    
 2003 May 1  Stefan Urbanek <urbanek@host.sk>
 
     * Support: updated files to use #include instead of #import
