Added ScriptPapers application
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16601 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,10 @@
       check for existence of ScriptingInfo.plist before using it
     * Modules: reflect changes to STBundleInfo
     * Updated all GNUmakefiles to use new path
+    * STEnvironment: added initDefault - this will replace confusing 
+      defaultScriptingEnvironment.
+    * Added Applications
+    * Added ScriptPapers application
 
 2003 Apr 22  Stefan Urbanek <urbanek@host.sk>
 
