Fixed linking under mingw32
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16682 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003 May 10
+
+    * Fixed linking under mingw32
+
 2003 May 2   Stefan Urbanek <urbanek@host.sk>
 
     * STBundleInfo: added objectReferenceDictionary; removed unnecessary ST 
