--- a/Applications/ScriptPapers/ChangeLog
+++ b/Applications/ScriptPapers/ChangeLog
@@ -1,3 +1,7 @@
+2003 May 11 Stefan Urbanek <urbanek@host.sk>
+
+    * Added -Wno-import
+    
 2003 May 4 Stefan Urbanek <urbanek@host.sk>
 
     * Added application icon
