Added some linkage dependencies
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16697 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2003 May 10
+2003 May 11 Stefan Urbanek <urbanek@host.sk>
+
+    * Fixed linking of some bundles
+
+2003 May 10 Stefan Urbanek <urbanek@host.sk>
 
     * Fixed linking under mingw32
     * STBundleInfo: implemented framework searching
