fixed decimal point/dot recognition
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16742 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,4 +1,9 @@
-2003 May 9
+2003 May 17   Stefan Urbanek <urbanek@host.sk>
+
+    * STSourceReader: treat decimal point followed by whitespace as '.' dot - 
+    end of statement.
+
+2003 May 9   Stefan Urbanek <urbanek@host.sk>
 
     * NSString+additions: added   
 
