Workaround for gnustep-base DO bug
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16925 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2003 Jun 15
 
-    * NSInvocation+additions: added unknown selector creation
+    * NSInvocation+additions: added unknown selector creation; created a
+    workaround for gnustep DO bug
 
 2003 May 11 Stefan Urbanek <urbanek@host.sk>
 
