Fixed signature creation
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16927 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
     * NSInvocation+additions: added unknown selector creation; created a
     workaround for gnustep DO bug
+    * STObjCRuntime: Fixed creation of signature.
 
 2003 May 11 Stefan Urbanek <urbanek@host.sk>
 
