Added empty implementation of script objects
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@17433 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003 Aug 5  Stefan Urbanek <urbanek@host.sk>
+    
+    * Added STScriptObject and STMethod.
+
 2003 Jun 15
 
     * NSInvocation+additions: added unknown selector creation; created a
