Changed from lib to framework
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@17436 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003 Aug 6
+
+    * Frameworks: new directory
+    * Changed StepTalk from library to framework
+    
 2003 Aug 5  Stefan Urbanek <urbanek@host.sk>
     
     * Added STScriptObject and STMethod.
