Cleanup after change
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@17439 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
     * Frameworks: new directory
     * Changed StepTalk from library to framework
+    * Modules: Removed StepTalk module as it is no more needed, because
+    we have framework and it can provide scripting capabilities by it self
+    * All GNUMakefiles modified to reflect change to Framework
     
 2003 Aug 5  Stefan Urbanek <urbanek@host.sk>
     
