Script object implemented :o)
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@17441 72102866-910b-0410-8b05-ffd578937521

--- a/TODO
+++ b/TODO
@@ -15,3 +15,5 @@ TODO list
 16 Remove StepTalk modules
 17 Fill implementation of STScriptObject, STMethod and related STEngine methods
 18 Rewrite Smalltalk compiler (grammar)
+19 Remove empty directories (Source, Modules/StepTalk)
+20 Replace STMethod languageName with map table of method class->engine class
