Added few named objects
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@17694 72102866-910b-0410-8b05-ffd578937521

--- a/Examples/Shell/ChangeLog
+++ b/Examples/Shell/ChangeLog
@@ -1,3 +1,7 @@
+2003 Sep 21
+
+    * Added named objects FileManager, LastCommand and LastObject
+
 2003 Jun 19
 
     * Renamed stshell.m to stshell_tool.m. MS Windows was causing problems with
