Accept negative step
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@17740 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,3 +1,8 @@
+2003 Sep 28 Stefan Urbanek <urbanek@host.sk>
+
+    * NSNumber: fixed -NSNumber to:step:do: - now accepts negative step.
+    (Patch by Alexander Diemand)
+
 2003 Sep 24 Stefan Urbanek <urbanek@host.sk>
     
     * Guard compilation with an autorelease pool
