Compiler warnings cleanup, Shell fixed
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@18145 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003 Nov 24 Stefan Urbanek <stefanu@altair.dcs.elf.stuba.sk>
+
+    * Few fixes, removed some compiler warnings. Fixed Shell to use
+    proper environment.
+
 2003 Nov 8 Stefan Urbanek <stefanu@altair.dcs.elf.stuba.sk>
 
     * Updated tools to use STConversation object.
