Change version to 0.8.1
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@18149 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003 Nov 24 Stefan Urbanek <stefanu@altair.dcs.elf.stuba.sk>
 
+    * Version 0.8.1
+
+2003 Nov 24 Stefan Urbanek <stefanu@altair.dcs.elf.stuba.sk>
+
     * Few fixes, removed some compiler warnings. Fixed Shell to use
     proper environment.
 
