Patch from Mateu Batle
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@19154 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004 Apr 19 Stefan Urbanek
+
+    * applied patch from Mateu Batle to replace nil valuse with STNil on 
+    message sending
+    * fixed STConversation issue
+    
 2004 Mar 28 Stefan Urbanek
 
     Changes according to the Helge Hess:
