--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004 Apr 25
+
+    * Changed license to LGPL
+
 2004 Apr 19 Stefan Urbanek
 
     * applied patch from Mateu Batle to replace nil valuse with STNil on 
