Updated StepTalk home page
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@19437 72102866-910b-0410-8b05-ffd578937521

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 StepTalk
 --------
 
-Ahthor: Stefan Urbanek  <urbanek@host.sk>
+Ahthor: Stefan Urbanek (Google the name for contact)
 License: LGPL (see file COPYING)
 
 
@@ -21,7 +21,7 @@ StepTalk requires GNUstep http://www.gnustep.org
 
 You can download StepTalk from 
 
-    http://steptalk.host.sk
+    http://www.gnustep.org/experience/StepTalk.html
 
 Documentation for users and developers:
 
@@ -107,5 +107,6 @@ See Documentation/Defaults.txt
 
 Feedback
 --------
-Any bug reports and comments are welcome at
-<urbanek@host.sk>
+Send comments, questions and suggestions to: discus-gnustep@gnu.org
+
+Send bug reports to: bug-gnustep@gnu.org
