--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,3 +1,7 @@
+2004 Jun 27 Stefan Urbanek
+
+    * Version 0.8.1
+
 2004 Jun 20 Stefan Urbanek
 
     * Added a fix to the compiler from Mateu Batle
