--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-2004 Apr 25
+2004 Jun 27 Stefan Urbanek
+
+    * Added examples:
+        - Developer/StepUnit.st from Mateu Batle
+        - awlaunch.sh from Frederico Munoz
+    * Version 0.8.1
+
+2004 Apr 25 Stefan Urbanek
 
     * Changed license to LGPL
 
