Fixed max number of literals and longjmp
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@19706 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,4 +1,9 @@
-2004 Jun 28
+2004 Jul 10 Stefan Urbanek
+
+    * Applied patch from Alexander V. Diemand (fixed bug #9595) - fixed
+    maximum number of literals, fixed longjmp
+
+2004 Jun 28 Stefan Urbanek
 
     * Fixed expresion duplicating.
 
