--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004 Sep 6  Stefan Urbanek
+
+    * stshell: fix for compiler
+    * added missing STEnvironmentDescription installation
+    
 2004 Aug 2  Stefan Urbanek
 
     * Search for scripts in */Library/Scripts/*
