Removed STMethodSignatureForSelector - not-portable to OSX
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@20329 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004 Nov 9 Stefan Urbanek
+
+    * Remove STMethodSignatureForSelector as it was deprecated because of
+    inportability to OSX.
+    
 2004 Sep 6  Stefan Urbanek
 
     * stshell: fix for compiler
