Introduced contexts finally commited
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@20518 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -3,6 +3,11 @@
     * Remove STMethodSignatureForSelector as it was deprecated because of
     inportability to OSX.
     
+2004 Nov 2 Stefan Urbanek
+
+    * Changed super of STBytecodes from NSData to NSObject - there were some
+    OSX issues
+
 2004 Jul 10 Stefan Urbanek
 
     * Applied patch from Alexander V. Diemand (fixed bug #9595) - fixed
