--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,19 @@
+2005 Jan 4  Stefan Urbanek
+
+    * First step of introducing contexts
+    
+    NOTE: This version is unstable.
+
 2004 Nov 9 Stefan Urbanek
 
     * Remove STMethodSignatureForSelector as it was deprecated because of
     inportability to OSX.
     
+2004 Sep 23 Stefan Urbanek
+
+    * STContext: new class
+    * STEnvironment: make it subclass of STContext, move several methods
+
 2004 Sep 6  Stefan Urbanek
 
     * stshell: fix for compiler
