enhanced full scripting: search all classes when enabled. warning: security should be checked
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@21331 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005 Jul 19 Stefan Urbanek
+    
+    * STEnvironment: search class name namespace when no object is found for
+    given name and full scripting is enabled.
+    
 2005 Jan 4  Stefan Urbanek
 
     * First step of introducing contexts
