Fixed undefined key exception - fixed in base too
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@21355 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,3 +1,7 @@
+2005 June 24 Stefan Urbanek
+
+    * STCompiler: Fixed STUndefinedKeyException name as it was fixed in -base
+    
 2005 June 20 Stefan Urbanek
 
     * Rewritten parts of STCompiler, STBytecodeInterpreter, STCompiled* and '
