reflect framework changes
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@21698 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,3 +1,7 @@
+2005 Aug 17 Stefan Urbanek
+
+    * NSObject+additions: new file, new method ifNil:block
+    
 2005 June 24 Stefan Urbanek
 
     * STCompiler: Fixed STUndefinedKeyException name as it was fixed in -base
