--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005 Sep 5 Stefan Urbanek
 
+    * Version 0.10.0
+
+2005 Sep 5 Stefan Urbanek
+
     * Frameworks/StepTalk: compiler warnings removed
 
 2005 Aug 30 Stefan Urbanek
