--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,35 @@
+0.10.0
+
+    * introduced new language management (STLanguageManager)
+    * introduced remote scripting (STRemoteConversation)
+    * new tool for semi-persistent environments: stenvironment
+    * added reading from stdin to stexec
+    * added remote scripting to stshell and stexec
+    * new conversation methods
+    * removed tools: stalk, stupdate_languages
+    * removed depreciated methods from STEnvironment, removed class STLanguage
+    
+    Notes:
+    - you can delete */Library/StepTalk/Configuration directories
+
+0.9.1
+
+    * Actor class - STActor. For more information see attached example or
+    Examples/Smalltalk/stactor.st
+    * fixes after GNUstep-base fixes of NSUnknownKey
+
+0.9.0
+
+    * Changed "full scripting" behaviour. When enabled, all classes are
+    available for scripting, not only those published by frameworks.
+    * There was done design fix in the Smalltalk language bundle. Instance
+    variables of script objects were accessed by index, now they are
+    referenced by names. This allows further creation of STActor
+    (STScriptObject successor) object that is composed of script methods and
+    ivars. Also it would be possible to create script methods for any objc
+    receiver. Ivar access is done through KVC. For more information do not
+    hesitate to ask.
+
 0.8.2
 
     * Fixed and changed license to LGPL
