Updated to use GNUSTEP_LIBRARY instead of GNUSTEP_INSTALLATION_DIR/Library
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@24554 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007 Feb 14 Nicola Pero
+
+   * All GNUmakefiles in the project: Use GNUSTEP_LIBRARY
+   instead of GNUSTEP_INSTALLATION_DIR/Library.
+
 2005 Sep 5 Stefan Urbanek
 
     * Version 0.10.0
