* Modules/GDL2/GNUmakefile: Use ADDITIONAL_NATIVE_LIBS instead of    GDL2_BUNDLE_LIBS to link GDL2 packages.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@26980 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008 Okt 28 Samuel Harvey
+
+   * Modules/GDL2/GNUmakefile: Use ADDITIONAL_NATIVE_LIBS instead of
+   GDL2_BUNDLE_LIBS to link GDL2 packages.
+	
 2007 Feb 14 Nicola Pero
 
    * All GNUmakefiles in the project: Use GNUSTEP_LIBRARY
