--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Modules/AppKit/GNUmakefile: Add header.m and footer.m to
+	dependencies of %.list -> %.m rule.
+	* Modules/AppKit/header.m (STGet@@NAME@@): Use local variable to
+	get rid of compiler warning.
+	* Modules/AppKit/AppKitNotifications.list: Update AppKit
+	notification list to match recent change in gui.
+
+	* Modules/AppKit/AppKitConstants.m:
+	* Modules/AppKit/AppKitEvents.m:
+	* Modules/AppKit/AppKitNotifications.m:
+	Regenerated.
+
 2008 Okt 28 Samuel Harvey
 
    * Modules/GDL2/GNUmakefile: Use ADDITIONAL_NATIVE_LIBS instead of
