--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,3 +1,9 @@
+2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+    * STSourceReader.m (-readNextToken): Fix bug where an incorrect token
+    range was set for a string token that ends at the end of the input
+    string.
+
 2005 Aug 17 Stefan Urbanek
 
     * NSObject+additions: new file, new method ifNil:block
