Update StepTalk Objective-C utilities to (mostly) use Objective-C 2 API.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@32787 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Frameworks/StepTalk/STObjCRuntime.m (STAllObjectiveCClasses,
+	STCreateTypedSelector, STConstructMethodSignatureForSelector,
+	selectors_from_list, STAllObjectiveCSelectors): Update to
+	Objective-C 2 API.
+
 2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Frameworks/StepTalk/Environments/StepTalk.stenv: Add missing
