Always register typed selectors in StepTalk, since forwarding to untyped selectors stopped working a while back in GNUstep.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@34533 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
-2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com
+2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Frameworks/StepTalk/STObjCRuntime.m (STSelectorFromString):
+	Always register typed selectors, since forwarding to untyped
+	selectors stopped working a while back in GNUstep.
+
+2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Frameworks/StepTalk/NSInvocation+additions.m:
 	* Frameworks/StepTalk/STStructure.m:
