--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+	* Frameworks/StepTalk/STEngine.h (-methodFromSource:...):
+	* Frameworks/StepTalk/STEngine.m (-methodFromSource:...):
+	STMethod is a protocol not a class.
+
+2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
 	* Frameworks/StepTalk/STObjCRuntime.m (STSelectorTypes,
 	STSelectorFromString, STCreateTypedSelector,
 	STConstructMethodSignatureForSelector): Add special case to
