Shut down a few more compiler warnings for StepTalk's Smalltalk interpreter.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@34537 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,5 +1,12 @@
 2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+    * STCompiler.m (-exceptionInfo): Return exceptionInfo dictionary.
+
+    * STCompiler.m (-compileMethodFromSource:forReceiver:, -compileString:,
+    -indexOfNamedReference:): Remove unneeded variables reported by gcc 4.6.
+
+2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
     * STBytecodes.h (-data, -length): Declare public methods.
     * STMethodContext.h: Remove declaration of unused methods, which were
     not implemented.
