Get StepTalk's script panel to work and protect against GNUstep stubbornly replacing an application's main menu when the scripting menu is loaded.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@34541 72102866-910b-0410-8b05-ffd578937521

--- a/ApplicationScripting/ChangeLog
+++ b/ApplicationScripting/ChangeLog
@@ -1,3 +1,11 @@
+2012-01-15  Wolfgang Lux  <wlux@uni-muenster.de>
+
+    * Source/STApplicationScriptingController.m (-scriptingMenu): Protect
+    against GNUstep stubbornly replacing the application's main menu.
+
+    * Source/STScriptsPanel.m (-selectScript:): Handle case where the
+    script's description is nil.
+
 2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
     * Source/STTranscript.h (-window):
