Remove obsolete NSDataLink constants from StepTalk's AppKit module.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@34543 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+	* Modules/AppKit/AppKitConstants.list: Remove obsolete NSDataLink
+	constants.
+	* Modules/AppKit/AppKitConstants.m: Regenerated.
+
+2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
 	* Documentation/ApplicationScripting.txt: Fix errors.
 
 2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
