New methods to construct rectangles from points and sizes.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@34544 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+	* Frameworks/StepTalk/STStructure.h:
+	* Frameworks/StepTalk/STStructure.m (+structureWithOrigin:size:,
+	extent:, corner:): New methods to construct rectangles from points
+	and sizes.
+
+	* TODO: Update.
+
+2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
 	* Modules/AppKit/AppKitConstants.list: Remove obsolete NSDataLink
 	constants.
 	* Modules/AppKit/AppKitConstants.m: Regenerated.
