Shut down compiler warnings for StepTalk's Shell example.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@34546 72102866-910b-0410-8b05-ffd578937521

--- a/Examples/Shell/ChangeLog
+++ b/Examples/Shell/ChangeLog
@@ -1,3 +1,10 @@
+2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+    * STShell.h:
+    * STShell.m:
+    * STShell+output.m: Miscellaneous changes to shut down compiler
+    warnings.
+
 2005 Aug 30
 
     * use STLanguageManager instead of removed STLanguage
