Fix memory management bugs in Steptalk detected by clang's static analyzer
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@34729 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2012-02-07  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Frameworks/StepTalk/STEnvironment.m (-registerObjectFinderNamed:):
+	* Frameworks/StepTalk/STEnvironmentDescription.m
+	(-updateFromDictionary:, -updateBehavioursFromDictionary:,
+	-updateClassWithName:description:):
+	* Frameworks/StepTalk/STFileScript.m (-source):
+	* Frameworks/StepTalk/STObjCRuntime.m (STAllObjectiveCSelectors):
+	* Tools/STExecutor.m (-executeScript:withArguments:):
+	* Tools/stalk.m (-createConversation, main):
+	* Tools/stenvironment.m (main): Fix potential space leaks detected
+	by clang.
+
+	* Frameworks/StepTalk/STBundleInfo.m (+stepTalkBundleNames): Fix
+	double release detected by clang.
+
 2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Frameworks/StepTalk/STStructure.h:
