--- a/ApplicationScripting/ChangeLog
+++ b/ApplicationScripting/ChangeLog
@@ -1,3 +1,7 @@
+2012-02-07  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+    * Source/STTranscript.m (-showError:): Fix space leak detected by clang.
+
 2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
     * Source/STScriptsPanel.m (-selectScript:): Validate Run button of the
