--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,3 +1,9 @@
+2012-02-07  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+    * STCompiledScript.m (-executedInEnvironment:):
+    * STSmalltalkScriptObject.m (-forwardInvocation:):
+    Fix potential space leak detected by clang.
+
 2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
     * STCompiledScript.m (+initialize, -executeInEnvironment:): Rename
