Add missing format parameter in Steptalk detected by clang's static analyzer
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@34730 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2012-02-07  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+	* Frameworks/StepTalk/STBundleInfo.m (-_bundleDidLoad:): Add
+	missing argument in NSLog call detected by clang.
+
+2012-02-07  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
 	* Frameworks/StepTalk/STEnvironment.m (-registerObjectFinderNamed:):
 	* Frameworks/StepTalk/STEnvironmentDescription.m
 	(-updateFromDictionary:, -updateBehavioursFromDictionary:,
