Fix unintended fall through in a switch statement in Steptalk detected by clang's static analyzer
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@34731 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Smalltalk/ChangeLog
+++ b/Languages/Smalltalk/ChangeLog
@@ -1,5 +1,10 @@
 2012-02-07  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+    * STSourceReader.m (-lineNumberForIndex:): Fix unintended fall through
+    in a switch statement detected by clang.
+
+2012-02-07  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
     * STCompiledScript.m (-executedInEnvironment:):
     * STSmalltalkScriptObject.m (-forwardInvocation:):
     Fix potential space leak detected by clang.
