--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2018-03-20  Graham Lee  <graham@iamleeg.com>
+
+	* Documentation/HowTo.txt: Document methods that still exist.
+
+	* Frameworks/StepTalk/STEngine.m (engineForLanguageWithName:):
+	* Languages/Smalltalk/SmalltalkEngine.m (multiple methods):
+	Correct spelling of 'deprecated' in log messages.
+
 2018-02-18  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Frameworks/StepTalk/STObjCRuntime.m (selector_types): Fix for
